--- a/WebContent/css/messagerie.css
+++ b/WebContent/css/messagerie.css
@@ -1,15 +1,17 @@
 @CHARSET "ISO-8859-1";
 
-
+/* Positionnement et colorisation des different ellement de la page  */
 #topMenu{
 	
 	position: fixed;
+	display: inline;
 	top: 50px;
-	left: 100px;
+	left: 127px;
 	width: 100%;
 	height: 50px;
 	background-color: #808080;
-	
+	margin: 0px;
+	padding: 0px
 }
 
 #leftMenu{
@@ -17,18 +19,20 @@
 	position: fixed;
 	top: 100px;
 	left: 0px;
-	width: 100px;
+	width: 127px;
 	height: 100%;
 	background-color: #808080;
-	
+	margin: 0px;
+	padding: 0px
 }
 
 #content{
 	
 	position: absolute;
-	left: 100px;
+	left: 127px;
 	top: 100px;
-	
+	margin: 0px;
+	padding: 0px
 }
 
 #recherche{
@@ -37,7 +41,109 @@
 	top: 50px;
 	left: 0px;
 	height: 50px;
-	width:  100px;
+	width:  127px;
 	border-color: black;
 	background-color: #808080;
+	margin: 0px;
+	padding: 0px
+}
+
+/*Creation du menu top*/
+
+#topMenu menu {
+	
+	display: inline;
+	width: 100%;
+	height: 50px;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#topMenu nav {
+	
+	display: inline;
+	width: 100%;
+	height: 50px;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#topMenu ul {
+	
+	list-style: none;
+	display: inline;
+	width: 100%;
+	height: 50px;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#topMenu li {
+	
+	display: inline;
+	list-style: none;
+	width: 127px;
+	height: 50px;
+	
+}
+
+#topMenu a {
+	
+	display: inline;
+	text-decoration: none;
+	width: 127px;
+	height: 50px;
+}
+
+/* Creation du menu left */
+
+#leftMenu menu {
+	
+	display: block;
+	width: 127px;
+	height: 100%;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#leftMenu nav {
+	
+	display: block;
+	width: 127px;
+	height: 100%;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#leftMenu ul {
+	
+	list-style: none;
+	display: block;
+	width: 127px;
+	height: 100%;
+	margin: 0px;
+	padding: 0px
+	
+}
+
+#leftMenu li {
+	
+	display: block;
+	list-style: none;
+	width: 127px;
+	height: 50px;
+	
+}
+
+#leftMenu a {
+	
+	display: block;
+	text-decoration: none;
+	width: 127px;
+	height: 50px;
 }
