--- a/WebContent/css/messagerie.css
+++ b/WebContent/css/messagerie.css
@@ -9,7 +9,7 @@
 	left: 127px;
 	width: 100%;
 	height: 50px;
-	background-color: #808080;
+	background-color: white;
 	margin: 0px;
 	padding: 0px
 }
@@ -21,7 +21,7 @@
 	left: 0px;
 	width: 127px;
 	height: 100%;
-	background-color: #808080;
+	background-color: white;
 	margin: 0px;
 	padding: 0px
 }
@@ -43,7 +43,7 @@
 	height: 50px;
 	width:  127px;
 	border-color: black;
-	background-color: #808080;
+	background-color: white;
 	margin: 0px;
 	padding: 0px
 }
