--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -5,8 +5,8 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	opacity: 0.4;
-	z-index: -1;
+	opacity: 1;
+	z-index: -99;
 	
 }
 
@@ -29,6 +29,8 @@
     margin-top: 150px;
 	width: 450px;
 	height: 200px;
+	background-color: rgba(255,255,255,0.6);
+	
 	
 }
 
@@ -40,6 +42,7 @@
     margin-top: 150px;
 	width: 450px;
 	height: 200px;
+	background-color: rgba(255,255,255,0.6);
 }
 
 .bouton{
@@ -50,10 +53,14 @@
 	width: 85px;
 }
 
-.textField{
-
-	postion: relative;
-	left: 20px;
+#password{
 	
+	position: relative;
+	left: 42px;
 }
 
+#login{
+	
+	position: relative;
+	left: 15px;
+}
