--- a/WebContent/css/company.css
+++ b/WebContent/css/company.css
@@ -1,9 +1,58 @@
 @CHARSET "ISO-8859-1";
 
 body{
-	background-color: silver;
+	background-image: url("../ressource/img/bg.jpg");
+	background-repeat:no-repeat;
+	background-position:center center;
+	background-attachment:fixed;
+	font-family: Arial, sans-serif;
 }
 .title{
 	text-align: center;
 	color: blue;
+}
+
+label{
+	display: inline-block;
+    width: 200px;
+    margin-right: 30px;
+/*     margin-left : 20px; */
+    vertical-align: top;
+    text-align: left;
+}
+
+input[type =radio] {
+/*     déjà en inline-block */
+    width: 30px;
+    padding: 30px;
+    vertical-align: top;
+}
+
+input[type= text]{
+	width: 200px;
+    padding: 4px;
+    vertical-align: top;
+}
+
+option {
+	font-family: Arial, sans-serif;
+}
+
+.fieldset{
+	background-color: rgba(255,255,255,0.6);
+	width:1000px;
+	padding: 15px;
+	border-width:1px;
+	border-color: black;
+	border-style: solid;
+}
+
+.button{
+	padding-left: 40%;
+/* 	padding-right: 55%; */
+}
+
+form{
+	padding-left: 20%;
+	padding-right: 25%;
 }
