--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -27,10 +27,13 @@
 	margin-left: 35%;
     margin-right: 50%;
     margin-top: 150px;
-	width: 450px;
+	width: 500px;
 	height: 200px;
+	padding: 15px;
 	background-color: rgba(255,255,255,0.6);
-	
+	border-width:1px;
+	border-color: black;
+	border-style: solid;
 	
 }
 
@@ -40,9 +43,13 @@
 	margin-left: 35%;
     margin-right: 50%;
     margin-top: 150px;
-	width: 450px;
+	width: 500px;
 	height: 200px;
+	padding: 15px;
 	background-color: rgba(255,255,255,0.6);
+	border-width:1px;
+	border-color: black;
+	border-style: solid;
 }
 
 .bouton{
