--- a/WebContent/css/messagerie.css
+++ b/WebContent/css/messagerie.css
@@ -1,203 +1,9 @@
 @CHARSET "ISO-8859-1";
 
-/* Positionnement et colorisation des different ellement de la page  */
-#topMenu{
-	
-	position: fixed;
-	display: inline;
-	top: 50px;
-	left: 127px;
-	width: 100%;
-	height: 50px;
-	background-color: white;
-	margin: 0px;
-	padding: 0px
-}
-
-#leftMenu{
-	
-	position: fixed;
-	top: 100px;
-	left: 0px;
-	width: 127px;
-	height: 100%;
-	background-color: white;
-	margin: 0px;
-	padding: 0px
-}
-
-#content{
-	
-	position: absolute;
-	left: 127px;
-	top: 100px;
-	margin: 0px;
-	padding: 0px
-}
-
-#recherche{
-	
-	position: fixed;
-	top: 50px;
-	left: 0px;
-	height: 50px;
-	width:  127px;
-	border-color: black;
-	background-color: white;
-	margin: 0px;
-	padding: 0px
-}
-
-/*Creation du menu top*/
-
-#topMenu menu {
-	
-	display: inline;
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#topMenu nav {
-	
-	display: inline;
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#topMenu ul {
-	
-	list-style: none;
-	display: inline;
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#topMenu li {
-	
-	display: inline;
-	list-style: none;
-	width: 127px;
-	height: 100%;
-	border-left: 1px solid black;
-	border-right: 1px solid black;
-	margin: 0px;
-	padding: 0px
-}
-
-#topMenu li :HOVER {
-	
-	background-color: #A0A0A0;
-	
-}
-
-#topMenu a {
-	
-	display: inline;
-	position: relative;
-	width: 127px;
-	height: 50px;
-	top: 15px;
-	text-decoration: none;
-	text-align: center;
-	color: black;
-	margin: 0px;
-	padding: 0px
-}
-
-/* Creation du menu left */
-
-#leftMenu menu {
-	
-	display: block;
-	width: 127px;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#leftMenu nav {
-	
-	display: block;
-	width: 127px;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#leftMenu ul {
-	
-	list-style: none;
-	display: block;
-	width: 127px;
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-	
-}
-
-#leftMenu li {
-	
-	display: block;
-	list-style: none;
-	width: 127px;
-	height: 50px;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-}
-
-#leftMenu li :HOVER {
-	
-	background-color: #A0A0A0;
-	
-}
-
-#leftMenu a {
-	
-	display: block;
-	text-decoration: none;
-	width: 127px;
-	height: 50px;
-	color: black;
-}
-
-/* Content */
-
-#content table {
-	
-	width: 100%;
-	height: 100%;
-	border: 1px solid black;
-}
-
-#content table th {
-	
-/* 	border-left-width: 1px; */
-/* 	border-left-color: black; */
-/* 	border-left-style: solid; */
-	
-	border-right-width: 1px;
-	border-right-color: black;
-	border-right-style: solid;
-	
-	background-color: #909090;
-}
-
-#content table tr {
-	
-	border-bottom-width: 1px;
-	border-bottom-color: black;
-	border-bottom-style: solid; 
-	width: 100%;
-	height: auto;
+body{
+	background-image: url("../ressource/img/bg.jpg");
+	background-repeat:no-repeat;
+	background-position:center center;
+	background-attachment:fixed;
+	font-family: Arial, sans-serif;
 }
