--- a/WebContent/css/recherche.css
+++ b/WebContent/css/recherche.css
@@ -6,12 +6,11 @@
 }
 
 #logo{
-	margin-left: auto;
-    margin-right: auto;	
+	margin-left: 50%;
+    margin-right: 50%;	
 }
 
 #blocRech{
-/* 	background-color: rgba(255,0,255,0.6); */
 	display : flex; 
 	width: 90%;
 	margin-left: auto;
@@ -68,5 +67,11 @@ input[type=button]{
 	margin: 5px;
 	margin-left: 80px;
 	margin-right: auto;
-	
+}
+
+select {
+	width: 40%;
+	margin: 5px;
+	padding: 2px;
+    vertical-align: top;
 }
