--- a/WebContent/css/recherche.css
+++ b/WebContent/css/recherche.css
@@ -28,6 +28,18 @@
 	margin-right:50px;
 }
 
+.listeEntreprises{
+	background-color: rgba(255,255,255,0.6);
+	margin-top:50px; 
+	width:90%;
+	padding: 15px;
+	border-width:1px;
+	border-color: black;
+	border-style: solid;
+	margin-left: auto;
+	margin-right:auto;
+}
+
 #favoris{
 	height: 75%;
 }
@@ -72,6 +84,27 @@ input[type=button]{
 select {
 	width: 40%;
 	margin: 5px;
+	margin-left: 10px;
 	padding: 2px;
     vertical-align: top;
+    border: 1px solid black;
+}
+
+table{
+	width : 80%;
+	border-collapse: collapse;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+th {
+	text-align: left;
+	border: 1px solid black;
+}
+
+td {
+	text-align: left;
+	border: 1px solid black;
+	padding: 2px;
 }
