--- a/WebContent/css/accueil.css
+++ b/WebContent/css/accueil.css
@@ -1,12 +1,23 @@
 @CHARSET "ISO-8859-1";
 
 
-#bienvenue{
+#texte{
 	background-color: rgba(255,255,255,0.6);
+	font-size: 20px;
 	width:700px;
 	padding: 15px;
 	border-width:1px;
 	border-color: black;
 	border-style: solid;
-		
+	margin-left: 10%;
+}
+
+#logo{
+	display : flex; 
+	margin-left: auto;
+    margin-right: auto;	
+}
+
+#bienvenue{
+	display: flex;
 }
