mise à jour css et Inscription.jsp création de la classe dao

--- a/WebContent/css/Inscription.css
+++ b/WebContent/css/Inscription.css
@@ -16,12 +16,10 @@ input[type=password] {
 
 p{
 	text-align: center;
+	
 }
 
 .b{
 	text-align: center;
-}
-
-background{
-	color: blue;
+	padding-top: 35px;
 }
