--- a/WebContent/css/recherche.css
+++ b/WebContent/css/recherche.css
@@ -74,7 +74,7 @@ input[type= text]{
     vertical-align: top;
 }
 
-input[type=button]{
+input[type=submit], input[type=reset]{
 	width: 15%;
 	margin: 5px;
 	margin-left: 80px;
@@ -91,7 +91,7 @@ select {
 }
 
 table{
-	width : 80%;
+	width : 100%;
 	border-collapse: collapse;
 	margin-left: auto;
 	margin-right: auto;
