--- a/WebContent/css/company.css
+++ b/WebContent/css/company.css
@@ -1,17 +1,5 @@
 @CHARSET "ISO-8859-1";
 
-/* body{ */
-/* 	background-image: url("../ressource/img/bg.jpg"); */
-/* 	background-repeat:no-repeat; */
-/* 	background-position:center center; */
-/* 	background-attachment:fixed; */
-/* 	font-family: Arial, sans-serif; */
-/* } */
-/* .title{ */
-/* 	text-align: center; */
-/* 	color: blue; */
-/* } */
-
 label{
 	display: inline-block;
     width: 300px;
@@ -72,11 +60,11 @@ form{
 	width:500px;
 	padding: 15px;
 	border-width:1px;
-	border-color: black;
+	border-color: red;
 	border-style: solid;
 	text-align: center;
 	margin-left: 35%;
-/* 	margin-right: 50%; */
+
 }
 
 .companiesList{
@@ -105,4 +93,9 @@ td {
 }
 .spanErreur{
 	color:red;
+}
+
+footer{
+	text-align: right;
+	margin-top: 60px;
 }
