--- a/WebContent/css/recherche.css
+++ b/WebContent/css/recherche.css
@@ -72,6 +72,7 @@ input[type= text]{
 	margin: 5px;
 	padding: 2px;
     vertical-align: top;
+    border : 1px solid grey;
 }
 
 input[type=submit], input[type=reset]{
