--- a/WebContent/css/messagerie/messagerie.css
+++ b/WebContent/css/messagerie/messagerie.css
@@ -28,7 +28,7 @@
 	
 }
 
-#recherche img{
+.search-logo{
 	
 	position: relative;
 	top: 9px;
@@ -217,6 +217,14 @@
 }
 
 .msgErr{
+	
 	color: red;
 	
+}
+
+.game-logo{
+	
+	position: relative;
+	left: 30px;
+	top: 8px;
 }
