--- a/WebContent/css/recherche.css
+++ b/WebContent/css/recherche.css
@@ -32,6 +32,8 @@
 	background-color: rgba(255,255,255,0.6);
 	margin-top:50px; 
 	width:90%;
+	height: 200px;
+	overflow : auto;
 	padding: 15px;
 	border-width:1px;
 	border-color: black;
